# nuvei-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
nuvei/: __init__.py  checksum.py  client.py  config.py  constants.py  exceptions.py  webhook.py
nuvei/services/: __init__.py  advanced_apm.py  authentication.py  card_operations.py  financial.py  orders.py  payments.py  subscriptions.py  three_d_secure.py  user_payment_options.py  users.py
tests/: conftest.py  test_async_client.py  test_checksum.py  test_checksum_integration.py  test_client.py  test_config.py  test_package.py  test_services_advanced_apm.py  test_services_authentication.py  test_services_card_operations.py  test_services_financial.py  test_services_orders.py  test_services_payments.py  test_services_subscriptions.py  test_services_three_d_secure.py  test_services_upo.py  test_services_users.py  test_webhook.py
