[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuvei"
version = "1.0.2"
description = "Nuvei REST API v1.0 SDK for Python — payment processing, 3D Secure, subscriptions, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Krishan Jangid"},
]
keywords = ["nuvei", "payment", "gateway", "credit-card", "psp", "3d-secure", "subscription", "nuvei-python-sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/krishanjangid/nuvei-python"
Documentation = "https://docs.nuvei.com"
Repository = "https://github.com/krishanjangid/nuvei-python"
Changelog = "https://github.com/krishanjangid/nuvei-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["nuvei*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
